BB-1868 Re-generate Client
